[package]
name = "data-angkatan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
csv = "1.3.0"
dotenvy = "0.15.7"
image = "0.24.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
